--- a/_config.yml
+++ b/_config.yml
@@ -18,10 +18,10 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Ability System The Right And Wrong Way
+title: Amalia Zarcu Game Programming Portfolio
 email: amalia.zarcu@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Ability Creation Tool in a Custom ECS-Based Engine
+  My portfolio is still in its early stages and needs to be updated.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  amzy55
