--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Amalia Zarcu Game Programming Portfolio
+title: Amalia Amzy Zarcu Game Programming Portfolio
 email: amalia.zarcu@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   My portfolio is still in its early stages and needs to be updated.
