--- a/_config.yml
+++ b/_config.yml
@@ -7,47 +7,47 @@ url: ''
 baseurl: 
 
 # Title of the Site
-title: What A Theme
+title: Amzy Amalia Zarcu | Game Programmer Portfolio
 # Description of the Site
-description: A customizable Jekyll portfolio theme
+description: 
 # URL of Image of the Site
-site-image: /WhatATheme/assets/images/meta.jpg
+site-image: ../assets/images/giornodots.png
 # Keywords of the Site
-site-keywords: Site, Template, Theme
+site-keywords: Portfolio, Game, Programming, Amzy, Amalia, Zarcu
 # URL for the Image of custom Favicon
-favicon-url: 
+favicon-url: ../assets/images/giornodots.png
 
 # URL of the Image of Custom Hero Image (i.e., the image in the background of the very first section of the Homepage)
-heroimage: https://images.pexels.com/photos/220444/pexels-photo-220444.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940
+heroimage: ../images/giornodots.png
 
 # Social Media and Contact
 # If you don't want to use any icon, you can leave them blank.
-email: thedevslot@gmail.com
-facebook_username: thedevslot
-twitter_username: thedevslot
-instagram_username: thedevslot
-linkedin_username: thedevslot
-github_username:  thedevslot
-youtube_channel_id: UCk_93NXYP-U_AOB5GfWlOow
+email: amalia.zarcu@gmail.com
+facebook_username: /
+twitter_username: /
+instagram_username: /
+linkedin_username: Amalia (Amzy) Zarcu
+github_username:  amzy55
+youtube_channel_id: /
 reddit_username: /
 behance_username: /
 dribbble_username: /
 spotify_username: /
 
 # Google Analytics
-google-analytics: UA-163806439-1
+google-analytics: /
 
 # Disqus
-disqus-shortname: thedevslot
+disqus-shortname: /
 
 # Name of the Author
-author-name: TheDevsLot
+author-name: Amzy Amalia Zarcu
 # URL for the Image of the Author
-author-image: https://cdn.pixabay.com/photo/2015/10/05/22/37/blank-profile-picture-973460_960_720.png
+author-image: ../assets/images/giornodots.png
 # 60 Words About the Author
-author-about: Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse eget pharetra velit, dapibus bibendum ex. Maecenas vitae laoreet mauris, ac luctus metus. Aliquam luctus velit vel ipsum feugiat, vel venenatis mauris hendrerit. Sed at vulputate sapien, eget vehicula dolor. Aliquam volutpat pulvinar neque sit amet sodales.
+author-about: Info about me to add
 # URL to the Author's Profile (i.e., Github, Twitter, Stackoverflow, etc)
-author-url: https://github.com/thedevslot
+author-url: https://www.linkedin.com/in/amalia-amzy-zarcu-001b57295/
 
 # SASS
 sass:
