--- a/_config.yml
+++ b/_config.yml
@@ -43,7 +43,7 @@ disqus-shortname: /
 # Name of the Author
 author-name: Amzy Amalia Zarcu
 # URL for the Image of the Author
-author-image: ../assets/images/me.png
+author-image: ../assets/images/Me.png
 # 60 Words About the Author
 author-about: Info about me to add
 # URL to the Author's Profile (i.e., Github, Twitter, Stackoverflow, etc)
