--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ url: ''
 baseurl: 
 
 # Title of the Site
-title: Amzy Amalia Zarcu | Game Programmer Portfolio
+title: Amzy Amalia Zarcu | Game Programming Portfolio
 # Description of the Site
 description: 
 # URL of Image of the Site
@@ -18,7 +18,7 @@ site-keywords: Portfolio, Game, Programming, Amzy, Amalia, Zarcu
 favicon-url: ../assets/images/giornodots.png
 
 # URL of the Image of Custom Hero Image (i.e., the image in the background of the very first section of the Homepage)
-heroimage: ../images/giornodots.png
+heroimage: ../images/IntakeCyberpunkScreenshot.png
 
 # Social Media and Contact
 # If you don't want to use any icon, you can leave them blank.
@@ -45,7 +45,7 @@ author-name: Amzy Amalia Zarcu
 # URL for the Image of the Author
 author-image: ../assets/images/MeZoom.png
 # 60 Words About the Author
-author-about: Info about me to add
+author-about: Info about me to add Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum 
 # URL to the Author's Profile (i.e., Github, Twitter, Stackoverflow, etc)
 author-url: https://www.linkedin.com/in/amalia-amzy-zarcu-001b57295/
 
