--- a/_config.yml
+++ b/_config.yml
@@ -7,9 +7,9 @@ url: ''
 baseurl: 
 
 # Title of the Site
-title: Amzy Amalia Zarcu | Game Programming Portfolio
+title: Amzy Amalia Zarcu
 # Description of the Site
-description: 
+description: Game Programming Portfolio
 # URL of Image of the Site
 site-image: ../assets/images/giornodots.png
 # Keywords of the Site
