--- a/_config.yml
+++ b/_config.yml
@@ -62,6 +62,12 @@ plugins:
 # Permalink
 permalink: "blog/:title"
 
+# Collections
+collections:
+  projects:
+    output: true
+    permalink: projects/:path.html
+
 # Compress
 compress_html:
   clippings: all
@@ -82,6 +88,12 @@ defaults:
       type: 'pages'
     values:
       layout: page
+  -
+    scope:
+      type: 'projects'
+    values:
+      layout: project
+      description: ""
 
 # Exclude
 exclude:
