Changed site description

--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ baseurl:
 # Title of the Site
 title: Amzy Amalia Zarcu
 # Description of the Site
-description: Game Programming Portfolio
+description: Gameplay/Tools Programmer
 # URL of Image of the Site
 site-image: ../assets/images/az.png
 # Keywords of the Site
