--- a/_config.yml
+++ b/_config.yml
@@ -11,11 +11,11 @@ title: Amzy Amalia Zarcu
 # Description of the Site
 description: Gameplay/Tools Programmer
 # URL of Image of the Site
-site-image: ../assets/images/az.png
+site-image: /assets/images/az-site-icon.png
 # Keywords of the Site
 site-keywords: Portfolio, Game, Programming, Amzy, Amalia, Zarcu, c++, Gameplay
 # URL for the Image of custom Favicon
-favicon-url: ../assets/images/az.png
+favicon-url: /assets/images/az-site-icon.png
 
 # URL of the Image of Custom Hero Image (i.e., the image in the background of the very first section of the Homepage)
 heroimage: ../images/IntakeCyberpunkScreenshot.png
